--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
-<link rel="stylesheet" href="style.css">
-<img src="https://placekitten.com/200/300" alt="Kocka">
-<h1>AnetkaAnetka</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <img src="https://placekitten.com/200/300" alt="Kocka">
+    <h1>AnetkaAnetka</h1>
+</body>
+
+</html>
