--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <img src="https://placekitten.com/200/300" alt="Kocka">
-    <h1>AnetkaAnetka</h1>
+    <h1>! Léňa je nejlepší !</h1>
 </body>
 
 </html>
